# lidar-wire-detection

./: .gitignore  README.md  lidar_catenary_assignment.ipynb  pyproject.toml  requirements.txt
scripts/: run_case.py
src/wire_catenary/: __init__.py  __main__.py  catenary.py  cli.py  clustering.py  io.py  pipeline.py  plane_fit.py  preprocessing.py  visualize.py
tests/: test_catenary.py  test_plane_fit.py
