[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wire-catenary"
version = "0.1.0"
description = "Detect overhead wires in drone LiDAR point clouds and fit 3D catenary models."
readme = "README.md"
authors = [
    { name = "Khushi Choubey" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
]

[project.scripts]
wire-catenary = "wire_catenary.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]